Removing FA icons from settings

--- a/site/guide/attestation/complete-attestation-questionnaires.qmd
+++ b/site/guide/attestation/complete-attestation-questionnaires.qmd
@@ -31,7 +31,7 @@ When prompted on your dashboard:
 
    ![Dashboard prompt for attestations](attestation-banner.png){width="90%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
 
-   Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
+   Alternatively, you can access attestations pending your action by clicking **Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
    - **{{< fa triangle-exclamation >}} Findings**
