--- a/site/guide/configuration/_add-groups.qmd
+++ b/site/guide/configuration/_add-groups.qmd
@@ -1,6 +1,6 @@
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
+1. Under User Permissions in the sidebar, select **Groups**.
 
 1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
 
