--- a/site/guide/configuration/_add-use-cases.qmd
+++ b/site/guide/configuration/_add-use-cases.qmd
@@ -5,7 +5,7 @@
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Under Workplace Settings, select **Organization**.
 
 1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
 
