--- a/site/guide/configuration/_invite-users.qmd
+++ b/site/guide/configuration/_invite-users.qmd
@@ -1,6 +1,6 @@
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions, click **{{< fa envelope >}} Invite New Users**.
+1. Under User Permissions, click **Invite New Users**.
 
 1. In Invite by Email:
 
