--- a/site/guide/configuration/_manage-permissions.qmd
+++ b/site/guide/configuration/_manage-permissions.qmd
@@ -1,4 +1,4 @@
-1. Under User Permissions, select **{{< fa screwdriver-wrench >}} Permissions**.
+1. Under User Permissions, select **Permissions**.
 
 1. Add or delete roles from a specific permission:
     - To assign a role to a permission, click **{{< fa plus >}}**, then select the permission from the drop-down menu.
