--- a/site/guide/configuration/_manage-role-users.qmd
+++ b/site/guide/configuration/_manage-role-users.qmd
@@ -13,7 +13,7 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions, select **{{< fa user-group >}} Roles**.
+1. Under User Permissions, select **Roles**.
 
 1. Click on the role whose users you want to manage.
 
