--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -32,7 +32,7 @@ Invite new users and review your current users from within the user directory. U
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under User Permissions, select **{{< fa book-open >}} User Directory**. 
+2. Under User Permissions, select **User Directory**. 
 
 3. Next to any individual user, click the {{< fa circle-plus >}} icon to open the Assign Roles menu for that user. 
 
@@ -44,7 +44,7 @@ Invite new users and review your current users from within the user directory. U
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under User Permissions, select **{{< fa book-open >}} User Directory**. 
+2. Under User Permissions, select **User Directory**. 
 
 3. Click the {{< fa xmark >}} next to the role for the user that you want to remove.
 
