--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -19,7 +19,7 @@ Personalize your user experience and ensure you have access to the necessary too
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Your Account, select **{{< fa user >}} Profile**. 
+2. Under Your Account, select **Profile**. 
 
    You can find the following on your profile page:
 
