--- a/site/guide/configuration/managing-your-organization.qmd
+++ b/site/guide/configuration/managing-your-organization.qmd
@@ -31,7 +31,7 @@ You will see the option to switch between organizations only if you belong to mo
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+2. Under Workplace Settings, select **Organization**.
 
 3. Under **Organization**, select the organization you'd like to switch to.
 
@@ -46,7 +46,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+2. Under Workplace Settings, select **Organization**.
 
 3. Under **Organization Name**, type in your new name and click **Update** to save your changes.
 
