--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -22,7 +22,7 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Under Workplace Settings, select **Organization**.
 
 1. Add, edit and delete business units as required.
 
@@ -44,7 +44,7 @@ In order to delete a business unit, there must be no models attached to that uni
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Under Workplace Settings, select **Organization**.
 
 1. Add or and delete use cases as required.
 
