--- a/site/guide/model-validation/_add-risk-areas.qmd
+++ b/site/guide/model-validation/_add-risk-areas.qmd
@@ -3,7 +3,7 @@
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
+1. Under Workplace Settings, select **Risk Areas & Validation Guidelines**.
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 
