--- a/site/guide/model-validation/_add-validation-guidelines.qmd
+++ b/site/guide/model-validation/_add-validation-guidelines.qmd
@@ -3,7 +3,7 @@
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
+2. Under Workplace Settings, select **Risk Areas & Validation Guidelines**.
 
 1. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
