--- a/site/guide/model-workflows/_configure-workflow-steps.qmd
+++ b/site/guide/model-workflows/_configure-workflow-steps.qmd
@@ -3,7 +3,7 @@ To add or edit workflow steps:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **{{< fa arrow-right-arrow-left >}} Workflows**.
+1. Under Workplace Settings, select **Workflows**.
 
 1. Click on **Inventory Model**:
  
@@ -27,7 +27,7 @@ To add or edit workflow steps:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **{{< fa arrow-right-arrow-left >}} Workflows**.
+1. Under Workplace Settings, select **Workflows**.
 
 1. Click on **Inventory Model**:
  
