--- a/site/guide/templates/_add-text-blocks.qmd
+++ b/site/guide/templates/_add-text-blocks.qmd
@@ -2,7 +2,7 @@ To create a new text block via the block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+1. Under Workplace Settings, select **Block Library**.
 
 1. Click **Add New Block** and enter:
  
