--- a/site/guide/templates/_view-documentation-templates.qmd
+++ b/site/guide/templates/_view-documentation-templates.qmd
@@ -1,7 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **{{< fa clone >}} Templates**.
+2. Under Workspace Settings, select **Templates**.
 
 3. Select one of the following template types from the tabs:
 
@@ -30,7 +30,7 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **{{< fa clone >}} Templates**.
+2. Under Workspace Settings, select **Templates**.
 
 3. Select one of the following template types from the tabs:
 
