--- a/site/releases/2023/2023-nov-09/highlights.qmd
+++ b/site/releases/2023/2023-nov-09/highlights.qmd
@@ -91,7 +91,7 @@ The onboarding guide tracks six common tasks that can be completed in almost any
 
 ::::
 
-You can hover over each task for more details. The guide can be minimized, leaving a trigger in the bottom right corner, or dismissed entirely. To reactivate the guide, go to **{{< fa gear >}} Settings** > **{{< fa user >}} Profile**. 
+You can hover over each task for more details. The guide can be minimized, leaving a trigger in the bottom right corner, or dismissed entirely. To reactivate the guide, go to **{{< fa gear >}} Settings** > **Profile**. 
 
 <!---feat: New Inventory and Project Listing data-table display by @gtagle in [#468](https://github.com/validmind/frontend/pull/468)--->
 
