--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -802,7 +802,7 @@ Labels: bug
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-70-ns}
-- Previously, display issues were present when adding or removing roles from users within the **{{< fa book-open >}} User Directory** — these issues have now been resolved.
+- Previously, display issues were present when adding or removing roles from users within the **User Directory** — these issues have now been resolved.
 
 :::
 
