--- a/site/releases/2024/2024-mar-27/highlights.qmd
+++ b/site/releases/2024/2024-mar-27/highlights.qmd
@@ -164,7 +164,7 @@ When registering new models in the model inventory, you can now designate additi
 
 ::: {.w-40-ns}
 
-You can specify the inventory fields that are [required on registration]{.smallcaps} under **{{< fa gear >}} Settings** > **{{< fa sliders >}} Model Inventory Fields**.
+You can specify the inventory fields that are [required on registration]{.smallcaps} under **{{< fa gear >}} Settings** > **Model Inventory Fields**.
 
 [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd){.button .button-green}
 
@@ -196,7 +196,7 @@ We made a number of improvements to how you manage user groups:
 
 ::: {.w-40-ns}
 
-You can create new user groups under **{{< fa gear >}} Settings** > **{{< fa users >}} Groups**.
+You can create new user groups under **{{< fa gear >}} Settings** > **Groups**.
 
 [Manage groups](/guide/configuration/manage-groups.qmd){.button .button-green}
 
