--- a/site/releases/2024/2024-may-22/release-notes.qmd
+++ b/site/releases/2024/2024-may-22/release-notes.qmd
@@ -275,7 +275,7 @@ Labels: enhancement, servicerocket
 
 ::: {.w-70-ns}
 
-We have introduced several updates to the **{{< fa building-columns >}} Organization** settings page, enabling you to manage business units and risk areas for your organization. 
+We have introduced several updates to the **Organization** settings page, enabling you to manage business units and risk areas for your organization. 
 
 :::
 
