--- a/site/releases/2024/2024-oct-22/release-notes.qmd
+++ b/site/releases/2024/2024-oct-22/release-notes.qmd
@@ -454,7 +454,7 @@ Labels: enhancement
 --->
 #### Rich text editor for validation guidelines
 
-You can now use rich text editing in the validation guideline description dialog, available under **{{< fa gear >}} Settings** > **{{< fa align-left >}} Risk Areas & Validation Guidelines**. 
+You can now use rich text editing in the validation guideline description dialog, available under **{{< fa gear >}} Settings** > **Risk Areas & Validation Guidelines**. 
 
 :::: {.flex .flex-wrap .justify-around}
 
