--- a/site/releases/2024/2024-sep-09/release-notes.qmd
+++ b/site/releases/2024/2024-sep-09/release-notes.qmd
@@ -24,9 +24,9 @@ Labels: enhancement
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-We've expanded on our risk area functionality and added a new page to your Workplace Settings: **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
+We've expanded on our risk area functionality and added a new page to your Workplace Settings: **Risk Areas & Validation Guidelines**.
 
-This replaces the old Risk Areas set up under **{{< fa building-columns >}} Organization**, and allows you to customize guidelines associated with your model validation templates.
+This replaces the old Risk Areas set up under **Organization**, and allows you to customize guidelines associated with your model validation templates.
 
 [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd){.button .button-green}
 
