--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -174,7 +174,7 @@ Get your organization ready for use by first defining business units and use cas
 **Add a business unit**
 :::
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Under Workplace Settings, select **Organization**.
 2. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
 3. Enter in your **[business unit name]{.smallcaps}**.
 4. Click **{{< fa plus >}} Add Business Unit** to save your changes.
@@ -188,7 +188,7 @@ Get your organization ready for use by first defining business units and use cas
 **Add a use case**
 :::
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Under Workplace Settings, select **Organization**.
 2. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
 3. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
 4. Click **{{< fa plus >}} Add Use Case** to save your changes.
@@ -236,7 +236,7 @@ Next, define your risk areas and validation guidelines:
 **Add a risk area & validation guideline**
 :::
 
-Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**:
+Under Workplace Settings, select **Risk Areas & Validation Guidelines**:
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
@@ -280,7 +280,7 @@ Manage user groups
 **Add a user group**
 :::
 
-Under User Permissions in the sidebar, select **{{< fa users >}} Groups**:
+Under User Permissions in the sidebar, select **Groups**:
 
 1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
 2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
@@ -329,7 +329,7 @@ Manage user roles
 **Create role & assign permissions**
 :::
 
-Under User Permissions, select **{{< fa user-group >}} Roles**:
+Under User Permissions, select **Roles**:
 
 1. Click **{{< fa plus >}} Add New Role**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
@@ -371,7 +371,7 @@ In addition to assigning permissions via individual user roles, you can add role
 **Modify global permissions**
 :::
 
-1. Under User Permissions, select **{{< fa screwdriver-wrench >}} Permissions**.
+1. Under User Permissions, select **Permissions**.
 2. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
 2. **Remove the role you created earlier** from a specific permission by clicking **{{< fa x >}}** next to the role.
 
@@ -473,7 +473,7 @@ After granting access to your users, you can adjust their roles as needed:
 **Modify a role's users**
 :::
 
-Under User Permissions, select **{{< fa user-group >}} Roles**:
+Under User Permissions, select **Roles**:
 
 1. **Click on the role you created earlier** and select the **Users** tab.
 2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
