--- a/site/guide/attestation/review-attestation-questionnaires.qmd
+++ b/site/guide/attestation/review-attestation-questionnaires.qmd
@@ -37,7 +37,7 @@ When prompted on your dashboard:
 
    ![Dashboard prompt for attestations](attestation-banner.png){width="90%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
 
-   Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
+   Alternatively, you can access attestations pending your action by clicking **Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
    - **{{< fa triangle-exclamation >}} Findings**
@@ -93,7 +93,7 @@ Following your [review of an attestation questionnaire](#review-attestation-ques
 
 1. Click **Open Attestations {{< fa arrow-right >}}**.
 
-   Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
+   Alternatively, you can access attestations pending your action by clicking **Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
    - **{{< fa triangle-exclamation >}} Findings**
