--- a/site/guide/configuration/_add-roles.qmd
+++ b/site/guide/configuration/_add-roles.qmd
@@ -1,7 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions, select **{{< fa user-group >}} Roles**.
+1. Under User Permissions, select **Roles**.
 
 1. Click **{{< fa plus >}} Add New Role**.
 
@@ -13,7 +13,7 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions, select **{{< fa user-group >}} Roles**.
+1. Under User Permissions, select **Roles**.
 
 1. Click **{{< fa plus >}} Add New Role**.
 
