--- a/site/guide/configuration/_monitor-invitations.qmd
+++ b/site/guide/configuration/_monitor-invitations.qmd
@@ -1,6 +1,6 @@
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under User Permissions, click **{{< fa envelope >}} Invite New Users**:
+1. Under User Permissions, click **Invite New Users**:
 
     - Monitor the status of invitations in the Pending Invites section.
     - Review the history of previously accepted invitations in the Invite History section.
