--- a/site/guide/configuration/manage-groups.qmd
+++ b/site/guide/configuration/manage-groups.qmd
@@ -24,7 +24,7 @@ Users must belong to a default group of `All`, and can belong to mulitple groups
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under **User Permissions** in the sidebar, select **{{< fa users >}} Groups**. 
+2. Under **User Permissions** in the sidebar, select **Groups**. 
 
 3. Groups are listed with their names and any provided descriptions. 
 
@@ -43,7 +43,7 @@ You can only remove non-default groups.
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under User Permissions, select **{{< fa users >}} Groups**.
+2. Under User Permissions, select **Groups**.
 
 3. Expand **See Details >** for the group you want to remove.
 
@@ -55,7 +55,7 @@ You can only remove non-default groups.
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under User Permissions in the sidebar, select **{{< fa users >}} Groups**. 
+2. Under User Permissions in the sidebar, select **Groups**. 
 
 #### To add a member to a group:
 
