--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -43,7 +43,7 @@ To rename a role after it has been created:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under User Permissions, select **{{< fa user-group >}} Roles**.
+2. Under User Permissions, select **Roles**.
 
 3. Select the role you want to rename.
 
