--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -255,7 +255,7 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 **Add a model stakeholder type**
 :::
 
-Under User Permissions, select **{{< fa users >}} Model Stakeholder Types**:
+Under User Permissions, select **Model Stakeholder Types**:
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
@@ -312,7 +312,7 @@ Working with documentation templates
 **Duplicate a template**
 :::
 
-Under Workplace Settings, select **{{< fa clone >}} Templates**:
+Under Workplace Settings, select **Templates**:
 
 1. Select one of the tabs for the type of template you want to duplicate. For example: **Documentation**
 2. Select the template to duplicate. For example: **Binary classification**
@@ -350,7 +350,7 @@ Customize documentation templates
 **Customize a template**
 :::
 
-Under Workplace Settings, select **{{< fa clone >}} Templates**:
+Under Workplace Settings, select **Templates**:
 
 1. Select one of the tabs for the type of template you want to edit. For example: **Documentation**
 2. Select the template to edit. For example, the duplicate you created earlier: **Copy of Binary classification**
@@ -412,7 +412,7 @@ Private blocks can be modified by any user role and are unique to that user.
 **Add a shared text block**
 :::
 
-1. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+1. Under Workplace Settings, select **Block Library**.
 2. Click **Add New Block** and enter in the details for your text block.
 3. Select the following **[sharing]{.smallcaps}** option: **Shared**
 4. Click **Add Block** to save your text block.
@@ -426,7 +426,7 @@ Private blocks can be modified by any user role and are unique to that user.
 **Duplicate a text block for private use**
 :::
 
-1. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+1. Under Workplace Settings, select **Block Library**.
 2. To the right of the text block you created earlier, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
 3. Make your changes to the details of the block, and select the following **[sharing]{.smallcaps}** option: **Private**
 4. Click **Duplicate Block** to save a private copy of the text block.
