--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -28,13 +28,13 @@ listing:
     - path: validmind-for-model-risk-management.html
       title: "Using {{< var vm.product >}} for Model Risk Management"
       subtitle: "Module 3"
-      description: "{{< fa check >}} Configure model stages <br> {{< fa check >}} Set up custom workflows <br> {{< fa check >}} Set up attestations"
+      description: "{{< fa check >}} Set up custom workflows <br> {{< fa check >}} Set up attestations"
       reading-time: "60"
       author: "{{< var vm.product >}}"
     - path: organizational-oversight-reporting.html
       title: "Organizational Oversight & Reporting"
       subtitle: "Module 4"
-      description: "{{< fa check >}} Audit model activity <br> {{< fa check >}} View analytics <br> {{< fa check >}} Set up custom reports"
+      description: "{{< fa check >}} Audit model activity <br> {{< fa check >}} View and customize analytics"
       reading-time: "25"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
