--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -30,7 +30,7 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As a **administrator** who has logged validation tests with the {{< var validmind.developer >}} to the {{< var validmind.platform >}}, I want to refine my model's validation report, submit my validation report for approval, and track finding resolution and other updates to my model."_
+_"As an **administrator** who has configured the {{< var validmind.platform >}} to suit our organizational requirements, I want to use {{< var vm.product >}} to oversee how our teams interact with our models and customize reporting to provide insights tailored to our use cases."_
 
 ::: {.tc}
 <br>
@@ -42,28 +42,11 @@ This final module is part of a four-part series:
 
 ## Module 4 — Contents {.center}
 
-
-:::: {.columns .f3}
-
-::: {.column width="50%" .mt4 .pr4}
-### Section 1
-
-- [Refine validation report](#refine-validation-report)
-- [Manage model findings](#manage-model-findings)
-- [Submit validation report for approval](#submit-report-for-approval)
+::: {.f2}
+1. [Audit model activity](#audit-model-activity)
+2. [Working with analytics](#working-with-analytics)
 
 :::
-
-::: {.column width="50%" .mt4}
-### Section 2
-
-- [Collaborate with others](#collaborate-with-others)
-- [Track model activity](#track-model-activity)
-- [View analytics](#view-analytics)
-
-:::
-
-::::
 
 First, let's make sure you can log in to {{< var vm.product >}}.
 
@@ -75,27 +58,27 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Prerequisite courses
 
-To continue, you need to have been [onboarded](administrator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role and completed the first three modules of this course:
+To continue, you need to have been [onboarded](administrator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa hand >}} Customer Admin**]{.bubble} role and completed the first three modules of this course:
 
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
 
 :::: {.columns}
 ::: {.column width="30%"}
 ::: {.tc}
-[Module 1](using-validmind-for-model-validation.html){.button target="_blank"}
+[Module 1](onboarding-your-organization.html){.button target="_blank"}
 :::
 
 :::
 ::: {.column width="30%"}
 ::: {.tc}
-[Module 2](running-data-quality-tests.html){.button target="_blank"}
+[Module 2](customizing-your-model-inventory.html){.button target="_blank"}
 :::
 
 :::
 
 ::: {.column width="30%"}
 ::: {.tc}
-[Module 3](developing-challenger-models.html){.button target="_blank"}
+[Module 3](validmind-for-model-risk-management.html){.button target="_blank"}
 :::
 
 :::
@@ -128,22 +111,20 @@ Be sure to return to this page afterwards.
 
 :::
 
-# Section 1 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
-
-# Refine validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Audit model activity {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Make qualitative edits
+View model activity
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-documentation/work-with-content-blocks.qmd){.button target="_blank"}
+[Learn more ...](/guide/model-inventory/view-model-activity.qmd){.button target="_blank"}
 
 :::
 
@@ -268,7 +249,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::
 
-# Manage model findings {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Working with analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -466,124 +447,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
-
-# Collaborate with others {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {.scrollable}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Comment threads
-
-::: {.tc}
-[Learn more ...](/guide/model-documentation/collaborate-with-others.qmd){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f3}
-::: {.f5 .nt2}
-:::
-
-{{< include /guide/model-documentation/_collaborate-with-others-activity.qmd >}}
-
-Have a question about the model? Collaborate with your developer right in the model documentation:
-
-::: {.panel-tabset}
-
-{{< include /guide/model-documentation/_collaborate-with-others-comments.qmd >}}
-
-:::
-
-:::
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Comment on a text block**
-:::
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. **In the content block you added earlier**: Post a comment, reply to it, and then resolve the thread.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-
-# Track model activity {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {.scrollable .center}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Track changes & updates
-
-::: {.tc}
-[Learn more ...](/guide/model-inventory/view-model-activity.qmd){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f4}
-### View documentation activity
-
-{{< include /guide/model-inventory/_view-model-activity-overview.qmd >}}
-
-{{< include /guide/model-inventory/_view-model-activity-steps.qmd >}}
-
-:::
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Review model activity**
-:::
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
-3. Filter the following activity: <br>**Comments** | **Status Updates** | **Model Updates** | **Test Results**
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-# View analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--l .three-quarters .auto-collapse-10}
-**Welcome to {{< fa square-poll-vertical >}} Analytics**
-
-Here, you can find executive summaries, track information on models, findings, and more.
-
-For example:
-
-1. Click **Findings** to review reports on findings.
-3. Click into any widget to review the findings reported by that widget.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Finalizing validation reports
-
+Organizational oversight & reporting
 
 ::: {.f3}
 <br>Want to learn more? Find your next learning resource on [{{< fa graduation-cap >}} {{< var validmind.training >}}](/training/training.qmd){target="_blank"}.
@@ -593,7 +463,7 @@ Finalizing validation reports
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-In this final module, you learned how to:
+In this final module, you learned how to:*
 
 - [x] Add or edit content blocks in your validation report
 - [x] Assess the compliance of a model within your validation report
@@ -607,10 +477,10 @@ In this final module, you learned how to:
 
 ::: {.f3}
 <br>
-There is more that {{< var vm.product >}} can do to help you validate models, from using your own template to code samples you can adapt for your own use case:
+There is more that {{< var vm.product >}} can do to help you validate models, from using your own template to code samples you can adapt for your own use case:*
 :::
 
 ::: {.tc}
-[All model validation guides](/guide/guides.qmd#model-validation){.button target="_blank"}
+[All {{< var vm.product >}} guides](/guide/guides.qmd){.button target="_blank"}
 
 :::
