--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -180,7 +180,6 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 
 ::: {.w-50-ns}
 #### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
-- Configure model stages
 - Set up custom workflows
 - Set up attestations
 
@@ -190,8 +189,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 #### <sup>Module 4</sup><br> Organizational Oversight & Reporting
 
 - Audit model activity
-- View analytics
-- Set up custom reports
+- View and customize analytics
 
 :::
 
