--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -44,9 +44,8 @@ This third module is part of a four-part series:
 
 ::: {.f2}
 1. [{{< var vm.product >}} for model risk management](#validmind-for-model-risk-management)
-2. [Set up model stages](#set-up-model-stages)
-3. [Set up custom workflows](#set-up-workflows)
-4. [Set up attestations](#set-up-attestations)
+2. [Set up custom workflows](#set-up-workflows)
+3. [Set up attestations](#set-up-attestations)
 
 :::
 
@@ -154,115 +153,6 @@ Once you've registered your model:
 2. Scroll through the page to explore the default layout, and the fields available out-of-the-box.
 
 When you're done, click [{{< fa chevron-right >}}]() to learn how to **customize your model inventory.**
-
-::::
-
-# Set up model stages {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {.scrollable}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Manage model inventory fields
-
-::: {.tc}
-[Learn more ...](/guide/model-inventory/manage-model-inventory-fields.qmd){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f3}
-
-{{< include /guide/model-inventory/_model-inventory-fields.qmd >}}
-
-::: {.panel-tabset}
-
-### Add or edit inventory fields
-
-{{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
-
-### Inventory field types
-
-{{< include /guide/model-inventory/_inventory-field-types.qmd >}}
-
-:::
-
-:::
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Add an inventory field**
-:::
-
-1. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**.
-2. Click **{{< fa plus >}} Add New Field**.
-3. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
-4. Click **Save** to add your field.
-
-::::
-
-## {.scrollable}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Mange model stakeholder types!
-
-::: {.tc}
-[Learn more ...](/guide/configuration/manage-model-stakeholder-types.qmd){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-
-:::: {.f5 .pr3 .pl3 .mt4 .embed}
-Please note that the stock **Model Developer**, **Model Owner**, and **Model Validator** stakeholder types are required by default for all models, and as such cannot be cannot be modified.
-:::
-
-:::
-
-::: {.column width="70%" .bl .pl4 .f3}
-
-{{< include /guide/configuration/_model-stakeholder-types.qmd >}}
-
-::: {.f4}
-
-::: {.panel-tabset}
-
-### 1. Add model stakeholder types
-
-{{< include /guide/configuration/_add-model-stakeholder-types.qmd >}}
-
-### 2. Manage stakeholder type permissions
-
-{{< include /guide/configuration/_manage-stakeholder-type-permissions.qmd >}}
-
-:::
-
-:::
-
-:::
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Add a model stakeholder type**
-:::
-
-Under User Permissions, select **Model Stakeholder Types**:
-
-1. Click **{{< fa plus >}} Add New Stakeholder Type**.
-2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
-3. Click on the stakeholder type whose permissions you added above.
-4. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
-5. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission. 
-6. Click **Save Permissions** to apply your changes.
 
 ::::
 
@@ -446,10 +336,9 @@ Private blocks can be modified by any user role and are unique to that user.
 ::: {.column width="70%" .bl .pl4 .f3}
 In this third module, you learned how to:
 
-- [x] Configure your model inventory's fields
-- [x] Define granular access to model inventory fields
-- [x] Customize and duplicate documentation templates
-- [x] Configure reusable blocks for use in templates
+- [x] Use {{< var vm.product >}} to oversee your entire MRM lifecycle
+- [x] Set up model stages and custom workflows
+- [x] Set up and schedule attestations
 
 :::
 ::::
