Module 4 save point

--- a/site/guide/reporting/manage-custom-reports.qmd
+++ b/site/guide/reporting/manage-custom-reports.qmd
@@ -65,67 +65,15 @@ Add, edit, or remove custom data to your analytics within the {{< var validmind.
 
 ## Add custom analytics
 
-To supplement the default reports with your own custom reports, first create a custom analytics page, then add your custom visualizations: 
+{{< include /guide/reporting/_add-custom-analytics.qmd >}}
 
 #### Create an analytics page
 
-1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
-
-2. Click **{{< fa plus >}} Add Page**.
-
-3. On the Add New Page module, enter in the:
-
-    - **[page name]{.smallcaps}**
-    - **[description]{.smallcaps}**
-
-4. Click **Add New Page** to create your custom analytics page. 
+{{< include /guide/reporting/_create-an-analytics-page.qmd >}}
 
 #### Create a visualization
 
-1. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
-
-2. Click **{{< fa circle-plus >}}** to open the Add Visualization panel.
-
-3. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
-
-4. Select a **[visualization type]{.smallcaps}**:
-
-    - **{{< fa chart-simple >}} Bar Chart**
-    - **{{< fa chart-pie >}} Pie Chart**
-    - **{{< fa hashtag >}} Counter**
-
-5. Select a **[dataset]{.smallcaps}**:
-
-    - **Findings**[^2]
-    - **Inventory Models**[^3]
-
-6. Select the visualization configuration options to apply to the dataset.[^4]
-
-7. When you are done configuring your dataset, click **Add Visualization** to insert your custom widget onto the analytics page.
-
-For example, to create an open findings visualization in stacked bar chart format, for average severity level, grouped by business unit (x-axis) and risk area (y-axis), you would set:
-
-- **[visualization type]{.smallcaps}** — `Bar Chart`
-- **[dataset]{.smallcaps}** — `Findings`
-- **[metrics]{.smallcaps}** — `Severity Level`, `Average` 
-- **[grouping]{.smallcaps}** — `Business Unit Name`, `Risk Area Name` 
-- **[filtering]{.smallcaps}** — `Finding Status Name`, `is not`, `Closed`
-- **[bar chart grouping style]{.smallcaps}** — `Stacked` 
-
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns}
-![Example setup for a stacked bar chart](custom-visualization-setup.png){fig-alt="Screenshot of an example setup for a stacked bar chart" .screenshot group="bar-chart"}
-
-:::
-
-::: {.w-40-ns}
-![Example y-axis on a custom bar chart](example-custom-visualization.png){fig-alt="Screenshot of an example y-axis on a custom bar chart" .screenshot group="bar-chart"}
-
-:::
-
-::::
+{{< include /guide/reporting/_create-a-visualization.qmd >}}
 
 ## Edit custom analytics
 
