--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -169,7 +169,7 @@ From the {{< var validmind.platform >}}:
     - **2.3 Correlations and Interactions**
     - **3.2 Model Evaluation**
 
-When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
