--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -325,7 +325,7 @@ Once you've called `preview_template()`:
 2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 3. Note how the structure of the validation report reflects the previewed template.
 
-When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -372,7 +372,7 @@ The structure of the model documentation reflects the documentation template app
 
 :::
 
-When you're done taking a look around the model documentation, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring the model documentation, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
