--- a/site/guide/reporting/view-report-data.qmd
+++ b/site/guide/reporting/view-report-data.qmd
@@ -16,32 +16,8 @@ Review detailed data on your models or model findings within the {{< var validmi
 
 ## View report data
 
-::: {.callout}
-Reports will not include data or findings from archived models.[^2]
-:::
-
-1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
-
-2. Click on the tab for the type of reports you want to review.
-
-3. For each of the bar or pie charts, you can hover for numerical breakdowns or click on individual sections to get a more detailed view.
-
-    For example, to see all findings related to specific risk area:
-
-    a. Click on the **Findings** tab. 
-    b. Under **Findings by Risk Area**, click on the risk area you want more details for.
-    c. On the page that opens, the applicable findings are listed:
-        - Filter this list of findings[^3] 
-        - Or customize column headers that display on this findings view[^4]
-    d. To get more details on the finding itself, click on the title of the finding to take you to the **{{< fa triangle-exclamation >}} Model Findings** section for the specific model the finding applies to.
-
+{{< include /guide/reporting/_view-report-data.qmd >}}
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
-
-[^2]: [Archive and delete models](/guide/model-inventory/archive-delete-models.qmd)
-
-[^3]: [Filter model findings](/guide/model-validation/view-filter-model-findings.qmd#all-model-findings)
-
-[^4]: [All model findings](/guide/model-validation/view-filter-model-findings.qmd#all-model-findings)
