--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -113,339 +113,170 @@ Be sure to return to this page afterwards.
 
 # Audit model activity {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-View model activity
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
+Track changes & updates
 
 ::: {.tc}
 [Learn more ...](/guide/model-inventory/view-model-activity.qmd){.button target="_blank"}
-
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
+{{< include /guide/model-inventory/_view-model-activity-overview.qmd >}}
 
-::: {.panel-tabset}
-
-### Add content blocks
-
-1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
-
-2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-
-3. Click on **1. Executive Summary** to expand and add content to that section.
-
-4. Hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
-
-  ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
-
-After adding the block to your documentation, generate a content draft with AI using the [content editing toolbar](/guide/model-documentation/work-with-content-blocks.qmd#content-editing-toolbar){target="_blank"}:
-
-{{< include /guide/model-documentation/content_blocks/_generate-with-ai.qmd >}}
-
-### Edit test result descriptions
-You can also use the content editing toolbar to revise the description of test results to explain the changes made to the raw data and the reasons behind them.
-
-For example:
-
-1. Within your validation report, click on **2.2.1. Data Quality** to expand that section and locate the linked Class Imbalance Assessment evidence.
-
-2. Click **See evidence details** to review the LLM-generated description that summarizes the test results, that confirm that our final preprocessed dataset actually passes our test.
-
-<!-- NEED A NEW IMAGE WHEN TESTED -->
-
-3. Edit the description for our individually inserted `ClassImbalance:raw_dataset_preprocessed` test:
-
-  ![Editor for a test result description](/notebooks/tutorials/model_validation/class-imbalance-results-detail.png){fig-alt="Screenshot showing the editor for a test result description" .screenshot}
+{{< include /guide/model-inventory/_view-model-activity-steps.qmd >}}
 
 :::
 
-:::
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add & edit content blocks**
+**Review model activity**
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. Click on **1. Executive Summary** to add and edit a content block.
-4. Click on **2.2.1. Data Quality** to edit the description for the linked Class Imbalance Assessment test results.
+2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
+3. Filter the following activity: <br>**Comments** | **Status Updates** | **Model Updates** | **Test Results**
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
-## {.scrollable}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Assess compliance
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
-
-::: {.tc}
-[Learn more ...](/guide/model-validation/assess-compliance.qmd#provide-compliance-assessments){.button target="_blank"}
-
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f4}
-
-::: {.panel-tabset}
-
-### Add risk assessment notes
-
-1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
-
-2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-
-3. Click on **2.2.1. Data Quality** to expand that section and locate the Class Imbalance Assessment sub-section.
-
-4. Click under **Risk Assessment Notes** to edit the content block using the content editing toolbar. 
-
-    For example, use **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** to create a draft summarizing the contents of the Class Imbalance Assessment sub-section.
-
-      ![Sample compliance assessment](class-imbalance-assessment.png){width=90% fig-alt="A screenshot showing a sample compliance assessment" .screenshot}
-
-### Provide compliance assessments
-
-In the same Class Imbalance Assessment sub-section, above the Risk Assessment Notes, locate the Guideline with the **[assessment]{.smallcaps}** drop-down.
-
-{{< include /guide/model-validation/_assess-compliance-assess.qmd >}}
-
-:::
-
-:::
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Add your compliance assessments**
-:::
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. Click on **2.2.1. Data Quality** to assess compliance for the Class Imbalance Assessment sub-section.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-:::
 
 # Working with analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Add more findings
+:::: {.slideover--r .three-quarters .auto-collapse-10}
+**Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
+Here, you can find executive summaries, track information on models, findings, and more.
 
-::: {.tc}
-[Learn more ...](/guide/model-validation/add-manage-model-findings.qmd){.button target="_blank"}
+::: {.embed}
+Default report widgets are provided in the **Models** and **Findings** pages.
 
-:::
-
-<br>
-
-Try it **live** on the next pages. {{< fa hand-point-right >}}
+You can supplement these with your own custom reports in additional pages to suit your organizational needs.
 
 :::
 
-::: {.column width="70%" .bl .pl4 .f4}
+When you're done exploring, click [{{< fa chevron-right >}}]() to learn more about analytics.
 
-Along with adding findings directly via validation reports, you can also add findings during your review of documentation:
-
-{{< include /guide/model-validation/_add-model-findings.qmd >}}
-
-::: {.panel-tabset}
-
-### Add finding via overview
-
-{{< include /guide/model-validation/_add-finding-via-overview.qmd >}}
-
-### Add finding via section
-
-{{< include /guide/model-validation/_add-finding-via-section.qmd >}}
-
-:::
-
-:::
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Add a finding via overview**
-:::
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. Click **{{< fa plus >}} Add Finding** to add a finding from the overview.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Add a finding via section**
-:::
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. Click on any section heading to expand and add a finding to that section via the **{{< var vm.product >}} Insights™** panel.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Track issue resolution
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
+View report data
 
 ::: {.tc}
-[Learn more ...](/guide/model-validation/add-manage-model-findings.qmd#track-issue-resolution){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f4}
-As you prepare your report, review open or past due findings, close resolved ones, or add a mitigation plan:
-
-::: {.panel-tabset}
-
-### Update a model finding
-
-{{< include /guide/model-validation/_track_issue_resolution.qmd >}}
-
-### View all model findings
-
-Along with model-specific findings, you can also view and filter a list of findings across all models within the {{< var validmind.platform >}}:
-
-{{< include /guide/model-validation/_view-all-findings.qmd >}}
-
-:::
-
-:::
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Update a model finding**
-:::
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
-3. Select one of the findings you logged during this course, and make some changes to any of the fields.
-4. When you are finished editing, set the finding **[status]{.smallcaps}** to `Closed`.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-## {background-iframe="https://app.prod.validmind.ai/model-findings" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .three-quarters .auto-collapse-10}
-::: {.tc}
-**View all {{< fa triangle-exclamation >}} Model Findings**
-:::
-
-Filter this list to include only findings you want to see, or toggle visibilty for column headers.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-# Submit report for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {.scrollable}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Transition model status
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
-
-::: {.tc}
-[Learn more ...](/guide/model-documentation/submit-for-approval.qmd){.button target="_blank"}
+[Learn more ...](/guide/reporting/view-report-data.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::: {.f4 .pr3 .pl3 .mt4 .embed}
+Reports will not include data or findings from [archived models](/guide/model-inventory/archive-delete-models.qmd).
+:::
 :::
 
-::: {.column width="70%" .bl .pl4 .f4}
+::: {.column width="70%" .bl .pl4 .f3}
 
-When you’re ready, verify the approval workflow, and then submit your model documentation for approval:
-
-::: {.panel-tabset}
-### Verify workflow
-
-Workflow states and transitions are configured by an administrator in advance, but you should verify that the expected people are included in the approval process.
-
-{{< include /guide/model-workflows/_model-workflows-see.qmd >}}
-
-### Submit for approval
-
-To transition through the approval workflow, all required workflow steps must be completed. By default, a model must be in the <br>[In Documentation]{.bubble} state before you can submit it for validation.
-
-{{< include /guide/model-workflows/_model-workflows-transition.qmd >}}
+{{< include /guide/reporting/_view-report-data.qmd >}}
 
 :::
 
-:::
 ::::
 
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Submit for approval**
+**View detailed analytics**
 :::
 
-1. Select the name of your model you registered for this course to open up the model details page.
-2. Locate the **[model status]{.smallcaps}** section.
-3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
-
+1. Click on the tab for the type of reports you want to review.
+2. For each of the bar or pie charts, hover for numerical breakdowns or click on individual sections to get a more detailed view.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage custom reports
+
+::: {.tc}
+[Learn more ...](/guide/reporting/manage-custom-reports.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/reporting/_add-custom-analytics.qmd >}}
+
+::: {.panel-tabset}
+
+### 1. Create an analytics page
+
+{{< include /guide/reporting/_create-an-analytics-page.qmd >}}
+
+### 2. Create a visualization
+
+{{< include /guide/reporting/_create-a-visualization.qmd >}}
+
+:::
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Create an analytics page**
+:::
+
+1. Click **{{< fa plus >}} Add Page**.
+2. On the Add New Page module, enter in the **[page name]{.smallcaps}** and the **[description]{.smallcaps}**.
+3. Click **Add New Page** to create your custom analytics page.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Create a custom visualization**
+:::
+
+1. Click on the tab for the custom page you added previously.
+2. Click **{{< fa circle-plus >}}** to open the Add Visualization panel.
+3. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
+4. Select a **[visualization type]{.smallcaps}**.
+5. Select a **[dataset]{.smallcaps}**.
+6. Select the visualization configuration options to apply to the dataset.
+7. Click **Add Visualization** to insert your custom widget onto the analytics page.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -462,25 +293,22 @@ Organizational oversight & reporting
 
 :::
 
-::: {.column width="70%" .bl .pl4 .f4}
+::: {.column width="70%" .bl .pl4 .f3}
 In this final module, you learned how to:*
 
-- [x] Add or edit content blocks in your validation report
-- [x] Assess the compliance of a model within your validation report
-- [x] Manage model findings via multiple methods
-- [x] Submit your validation report for approval
-- [x] Collaborate with other stakeholders on your model
-- [x] Track updates on your model
+- [x] Track updates on models
 - [x] Navigate the analytics dashboard
+- [x] Create custom report pages and visualizations
+
 :::
 ::::
 
-::: {.f3}
+::: {.f2}
 <br>
-There is more that {{< var vm.product >}} can do to help you validate models, from using your own template to code samples you can adapt for your own use case:*
+There is more that {{< var vm.product >}} can do to help you oversee models and unite your model risk management teams within one comprehensive tool:
 :::
 
 ::: {.tc}
-[All {{< var vm.product >}} guides](/guide/guides.qmd){.button target="_blank"}
+[All {{< var validmind.platform >}} guides](/guide/guides.qmd){.button target="_blank"}
 
 :::
