Editing add a visualization

--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -1,7 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
 1. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
-1. Click **{{< fa circle-plus >}}** to open the Add Visualization panel.
+1. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
 
 1. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
 
@@ -49,7 +49,7 @@ For example, to create an open findings visualization in stacked bar chart forma
 :::: {.content-hidden unless-format="revealjs"}
 1. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
-1. Click **{{< fa circle-plus >}}** to open the Add Visualization panel.
+1. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
 
 1. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
 
