--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -160,9 +160,9 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 Here, you can find executive summaries, track information on models, findings, and more.
 
 ::: {.embed}
-Default report widgets are provided in the **Models** and **Findings** pages.
+Default report widgets are provided in the **Models** and **Findings** dashboards.
 
-You can supplement these with your own custom reports in additional pages to suit your organizational needs.
+You can supplement these with your own custom reports in additional dashboards to suit your organizational needs.
 
 :::
 
@@ -294,11 +294,11 @@ Organizational oversight & reporting
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-In this final module, you learned how to:*
+In this final module, you learned how to:
 
 - [x] Track updates on models
 - [x] Navigate the analytics dashboard
-- [x] Create custom report pages and visualizations
+- [x] Create custom report dashboards and visualizations
 
 :::
 ::::
